script includes 3rd org

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
     "postinstall": "husky install",
     "precommit": "lint-staged",
-    "delete-data":"sf apex run --target-org loyalty2 --file scripts/apex/deleteData.apex"
+    "delete-data-2":"sf apex run --target-org loyalty2 --file scripts/apex/deleteData.apex",
+    "delete-data-3":"sf apex run --target-org loyalty3 --file scripts/apex/deleteData.apex"
   },
   "devDependencies": {
     "@lwc/eslint-plugin-lwc": "^1.1.2",
